Images uploaded and linked to document

--- a/paper/Paper_1_v02.Rmd
+++ b/paper/Paper_1_v02.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Using Energy Smart Meter Data and Socio-Demographic Indicators to Understand Consumption in Relation to Deprivation Levels"
 author: "Ellen Talbot"
-date: "04/05/2018"
+date: "02.06.18"
 output:
   word_document: default
   html_document: default
@@ -36,26 +36,25 @@ As such, the overarching aim of this paper is twofold; to address our ability to
 
 Of the literature reveiwed there was a clear disparity in the meaning of the word 'energy'. Of the titles which included the words 'smart meter', 'energy' or 'electricity', many focus explicitly on electricity and feature it in the title, [@Jones2015; @mcloughlin2015clustering; @ardakanian2014computing; @viegas2016classification; @Rhodes2014; @Kavousian2013; @Huebner2016] while some use 'energy' as a reference to only electricity [@hargreaves2013keeping; @kwac2013utility; @haben2016analysis; @parra2016customers]. The only authors to take 'energy' to mean both gas and electricity were @Huebner2015, @Druckman2008, @Wyatt2013 and @Brounen2012 - but sample sizes were significantly smaller than in our study. This is often the case in energy studies, and of all those reviewed, the largest sample of housing was @Brounen2012 with 300,000 Dutch homes. As far as the authors can establish, there are not yet any known studies with a focus purely on gas consumption and smart meters. 
 
-Our literature review was undertaken to establish those factors previously identified as having an effect on energy consumption in a domestic setting was used to influence the framework of the current study. Time and again the existing literature looks at demographic predictors of energy behaviour. @Frederiks2015, [pp576] provide a thorough review of this literature, arguing that despite many inconsistencies within the framework, there is now general agreement that “several broad yet interrelated categories of variables may explain individual differences in household energy use”. These explanatory variables encompass three main fields; socio-demographic (e.g., income, education, household size, dwelling type and tenure), psychological factors (e.g., knowledge, values, attitudes) and external factors (e.g., economics, political and legal). This research is focused soley on the socio-demographic aspects.
+Our literature review was undertaken to establish those factors previously identified as having an effect on energy consumption in a domestic setting was used to influence the framework of the current study. Time and again the existing literature looks at demographic predictors of energy behaviour. @Frederiks2015, (pp .576) provide a thorough review of this literature, arguing that despite many inconsistencies within the framework, there is now general agreement that “several broad yet interrelated categories of variables may explain individual differences in household energy use”. These explanatory variables encompass three main fields; socio-demographic (e.g., income, education, household size, dwelling type and tenure), psychological factors (e.g., knowledge, values, attitudes) and external factors (e.g., economics, political and legal). This research is focused soley on the socio-demographic aspects.
 
 Overwhelmingly, the literature pinpoints household income as the most positively related socio-demographic variable in regards to domestic energy consumption [Abrahamse2011; Rhodes2014; Jones2015; Druckman2008]. Yet, a study by @Kavousian2013 found that there was neither a positive or negative relationship between income and energy consumption, suggesting interplay between that and external factors such as the weather conditions and location as more influential. 
 
-Income is intrinsically linked to other factors such as employment status, education and household size, all of which may facilitate or constrain energy related behaviours. As an example; those in full time employment (and therefore have a higher income) are more likely to spend less time at home than the retired and unemployed, but they are also more likely to own and use more electrical appliances than lower income households [@@Gatersleben2002; Holloway2006]. Employment status can be used as a proxy for household income but there is only limited evidence to show how it indirectly affects energy consumption [@Frederiks2015].
+Income is intrinsically linked to other factors such as employment status, education and household size, all of which may facilitate or constrain energy related behaviours. As an example; those in full time employment (and therefore have a higher income) are more likely to spend less time at home than the retired and unemployed, but they are also more likely to own and use more electrical appliances than lower income households [@Gatersleben2002; @Holloway2006]. Employment status can be used as a proxy for household income but there is only limited evidence to show how it indirectly affects energy consumption [@Frederiks2015].
 
-The literature also suggest tenure as a highly influential variable on energy consumption, if only indirectly. @Sardianou2007 argues that because tenants in privately rented accommodation are constrained, they are the least likely to undertake energy conservation home improvements as they will see very little return on their investment. Likewise, private landlords are often unwilling to invest because they are not responsible for the bills. Home-owners are more likely to invest in energy conservation as they are less transient, have greater financial security and receive greater return on energy efficiency investments in the long term [@Frederiks2015]. However, @Jones2015, found that households had the same likelihood of being high consumers irrespective of mode of tenure. Other earlier studies have also concluded that tenure type has no significant effect on electricity use, again suggesting relationships between that and other external variables [@Kavousian2013; @Bedir2013; @Leahy2010; @Tso2007].
+The literature also suggest tenure as a highly influential variable on energy consumption, if only indirectly. @Sardianou2007 argues that because tenants in privately rented accommodation are constrained, they are the least likely to undertake energy conservation home improvements as they will see very little return on their investment. Likewise, private landlords are often unwilling to invest because they are not responsible for the bills. This is also cited by the @DECC2017 as one of the main constraints to the reduction of fuel poverty in privately rented accomodation. Home-owners are more likely to invest in energy conservation as they are less transient, have greater financial security and receive greater return on energy efficiency investments in the long term [@Frederiks2015]. However, @Jones2015, found that households had the same likelihood of being high consumers irrespective of mode of tenure. Other earlier studies have also concluded that tenure type has no significant effect on electricity use, again suggesting relationships between that and other external variables [@Kavousian2013; @Bedir2013; @Leahy2010; @Tso2007].
 
-Some studies take particular interest in the number of appliances in a household, which may be indicative of a families life cycle - but sample sizes are small and generally only one survey is done for the explicit puropse of the study [@mcloughlin2015clustering; viegas2016classification; Rhodes2014; weiss2012leveraging; @Leahy2010]. 
+Some studies take particular interest in the number of appliances in a household, which may be indicative of a families life cycle - but sample sizes are small and generally only one survey is done for the explicit puropse of the study [@mcloughlin2015clustering; @viegas2016classification; @Rhodes2014; @weiss2012leveraging; @Leahy2010]. 
 
-Characteristics associated with the dwelling itself have also been linked to occupant’s variations in energy consumption. Dwelling age, type and size are influential, as is the existing equipment within the dwelling. The number of features such as floors, room and windows as well as the installation of insulation and efficient heating all contribute [@VanRaaij1983; Jones2015]. @Schipper1989 suggest that up to half of total household energy use depends on these characteristics. 
+Characteristics associated with the dwelling itself have also been linked to occupant’s variations in energy consumption. Dwelling age, type and size are influential, as is the existing equipment within the dwelling. The number of features such as floors, room and windows as well as the installation of insulation and efficient heating all contribute [@Jones2015]. @Schipper1989 suggest that up to half of total household energy use depends on these characteristics. 
 
 # The impact of ever increasing energy consumption and the growing need for energy efficiency.
 
-On the international scale, the increased release of greenhouse gases into the atmosphere has caused an rise in global temperatures of 0.8&deg;C  since 1880 - but two thirds of this warming has occured since 1975 [@Observatory]. According to the IEA (International Energy Association), energy efficiency can contribute up to 49% of the energy related CO2 emission reductions that are nedded to limit global temperature increases to less than 2&deg;C by 2050. "Energy efficiency, including energy conversation, is a long-term priority for G20 members, as it constitures the optimum utilisation of energy resources" [@G20-2020] https://ec.europa.eu/energy/sites/ener/files/documents/G20%20Energy%20Efficiency%20Leading%20Programme.pdf] (pp.4). G20 members account for over 80% of both global energy consumption and greenhouse gases but have proven experience in "energy efficiency measures and in achieving energy reductions". From 1990 to 2013,the G20s total energy consumption savings reached about 4.3 billion TOE (define TOE) and about 10.4 billion tonnes of carbon dioxide emissions were avoided. Energy efficiency is one of the most important mechanisms through which countries can act to mitigate climate change in the short to long term.   
-
+On the international scale, the increased release of greenhouse gases into the atmosphere has caused an rise in global temperatures of 0.8&deg;C  since 1880 - but two thirds of this warming has occured since 1975 [@Observatory]. According to the IEA (International Energy Association), energy efficiency can contribute up to 49% of the energy related CO2 emission reductions that are nedded to limit global temperature increases to less than 2&deg;C by 2050. "Energy efficiency, including energy conversation, is a long-term priority for G20 members, as it constitures the optimum utilisation of energy resources" [@G20-2020] (pp.4). G20 members account for over 80% of both global energy consumption and greenhouse gases but have proven experience in "energy efficiency measures and in achieving energy reductions". From 1990 to 2013,the G20s total energy consumption savings reached about 4.3 billion TOE (Ton of oil equivalent) and about 10.4 billion tonnes of carbon dioxide emissions were avoided. Energy efficiency is one of the most important mechanisms through which countries can act to mitigate climate change in the short to long term.   
 
 At the EU scale, the UK is one of the worst offenders for domestic energy consumption; the EU average was 25.4% of final energy consumption in 2016 [@Eurostat] whereas the UK sat at 29% in 2015. This could however, possibly be explained by the relative age of the UK housing stock in comparision to the rest of the EU, with many houses dating from the Victorian era. As a result, many houses are poorly insulated and ultimately consume more to maintain a given level of comfort [@Strategy]. The Euro 2020 energy strategy stipulates that all countries must aim to reduce greenhouse gas emissions by 20% and to make a 20% improvement in energy efficiency. The current strategy is unlikely to achieve these targets, but the report pin points smart meters and power grids as the key to full exploitation of the potential for energy savings [@eu2020].
 
-Increased demand in energy globally and continentally leads to a real price increase for domestic consumers in the UK. The average household spend on fuel has risen from X in X to X in X. As discussed, the UK has set targets in terms of a reduction in consumption and emissions, but has also commited to reducing the number of people who find themselves in fuel poverty because of these increased prices. Fuel poverty is a pertinent issue in the UK as the gap widens and people who have both a low income and high fuel costs find themselves deeper into fuel poverty as prices continue to rise well over and above rates of inflation. 
+Increased demand in energy globally and continentally leads to a real price increase for domestic consumers in the UK. Despite there being a decrease in energy prices of 1.5% between 2013 and 2015, the average household spend on fuel has remained relatively static since 2013 at around £1240, but this does not account for inflation or stalling wage rises [@DECC2017]. As discussed, the UK has set targets in terms of a reduction in consumption and emissions, but has also commited to reducing the number of people who find themselves in fuel poverty because of these increased prices. Fuel poverty is a pertinent issue in the UK as the gap widens and people who have both a low income and high fuel costs find themselves deeper into fuel poverty as prices continue to rise well over and above rates of inflation. 
 
 # The representativeness of smart meter data 
 
@@ -93,9 +92,7 @@ The most interesting patterns occur in the highest and lowest usage values. Grou
 
 “The population of this group shows a noticeably higher proportion of children aged 0 to 14 than the parent supergroup and a lower proportion aged 90 and over. There is also a higher proportion of people with mixed ethnicity. Households in this group are more likely to live in terraced properties and to live in privately rented accommodation. Unemployment is slightly higher than for the parent supergroup.”
 
-This suggests that family size and having children living at home is linked to energy usage. It also suggests that energy usage is higher due to being at home consistently during the day through unemployment and child care duties. It may also back up the literature that states that privately rented accommodation are the most likely to use the greatest amounts of energy due to them being comparatively poorly insulated and energy efficient, as landlords know they will see little return on this kind of investment when tenants are typically responsible for the utility bills. The tenants are also unwilling to make improvements of this nature as they are also unlikely to see any long-term benefit from investment on a house they do not own. It is agreed in the IEA energy strategy that the disconnect between divided incentives for owners and tenants needs to be addressed for energy efficiency to improve [eu2020]. 
-
-Another group worthy of noting is Group 1b; Rural tenants, whose pen portrait reads:
+This suggests that family size and having children living at home is linked to energy usage. It also suggests that energy usage is higher due to being at home consistently during the day through unemployment and child care duties. It may also back up the literature that states that privately rented accommodation are the most likely to use the greatest amounts of energy due to them being comparatively poorly insulated and energy efficient, as landlords know they will see little return on this kind of investment when tenants are typically responsible for the utility bills. The tenants are also unwilling to make improvements of this nature as they are also unlikely to see any long-term benefit from investment on a house they do not own. It is agreed in the IEA energy strategy that the disconnect between divided incentives for owners and tenants needs to be addressed for energy efficiency to improve [eu2020]. Another group worthy of noting is: Group 1b; Rural tenants, whose pen portrait reads:
 
 “The age structure is very similar to the supergroup^, though people are less likely to live in communal establishments. Compared with the parent supergroup, there is a higher proportion of households living in semi-detached, terraced properties and flats, with a higher proportion socially renting. People are less likely to work in the agriculture industry than for the parent supergroup.” ^Middle aged to older and retired.
 
@@ -111,9 +108,7 @@ Group 3C: Ethnic Dynamics use only slightly more energy than the lowest group.
 
 “In this group non-White ethnic groups are not represented as highly as in the parent supergroup and there is a higher proportion of people born in the UK or Ireland. Households are more likely to live in a flat and to socially rent. There is a higher proportion of unemployed in the group but those in employment are more likely to work in the manufacturing industry, and to use private transport to travel to work.”
 
-This low usage can again be attributed to living in smaller accommodation, but it is possible that they use slightly more as some are unemployed and therefore more likely to use energy consistently throughout the day.
-
-This exploration led to agreement that there was a definitive link between energy consumption and deprivation levels. 
+This low usage can again be attributed to living in smaller accommodation, but it is possible that they use slightly more as some are unemployed and therefore more likely to use energy consistently throughout the day. This exploration led to agreement that there was a definitive link between energy consumption and deprivation levels. 
 
 # Policy impacts from the dichotomy between energy poverty and fuel poverty 
 
@@ -131,9 +126,9 @@ To get a deeper understanding of the demographic characteristics of Smart Meter 
 
 A townsend score - a measure of relative deprivation - is made up of four census variables and holds utility for understanding deprivation as it adheres most closely to the concepts of material disadvantage [@Morris1991]. The four index variables; percentage of homes with access to a car or van, percentage of homes with more than 1 person per room, percentage of homes not owner occupied and percentage of people economically active yet unemployed; are totaled and converted to a z-score [@Townsend1987]. Because this was to be used in tandem with the energy data, an original townsend score was calculated from the reweighted census variables at the PCS scale.
 
-The literature time and again refers to accomodation type as a major factor in energy consumption. This is because the type of accommodation a person lives is a good proxy for their usage habits; for example those who live alone will consume much less energy than a family with three children for a multitude of reasons; a large family are more likely to occupy a home with a larger floor space as their need is greater. They therefore have more rooms which require heating and lighting, and they will likely have a higher number of appliances, and or use these appliances such as the dishwsher or washing machine much more frequently than a single person living alone to achieve the same level of comfort.
+The literature time and again refers to accomodation type as a major factor in energy consumption. This is because the type of accommodation a person lives is a good proxy for their usage habits; for example those who live alone will consume much less energy than a family with three children for a multitude of reasons; a large family are more likely to occupy a home with a larger floor space as their need is greater. They therefore have more rooms which require heating and lighting, and they will likely have a higher number of appliances, and or use these appliances such as the dishwsher or washing machine much more frequently than a single person living alone to achieve the same level of comfort [@Gatersleben2002, @Holloway2006, @Jones2015].
 
-It is also true to say that the UKs housing stock is currently much older than that in the rest of Europe. This goes some way to explaining the relative higher consumption but also at an individual level, post-war terrace houses are still extremely common, but are poorly insulated and in need of updating. Those families living in large detached and semi-detached houses are also more likely to be owner occupiers, and the DECC stated in their latest report that it is the disconnect between tenants and landlords that stands in the way of privately rented homes becoming more energy efficient, because it is unclear who should pay for and benefit from the efficiency measures. Private renters are the most likely to be in the deepest fuel poverty. 
+It is also true to say that the UKs housing stock is currently much older than that in the rest of Europe. This goes some way to explaining the relative higher consumption but also at an individual level, post-war terrace houses are still extremely common, but are poorly insulated and in need of updating [@DECC2017]. Those families living in large detached and semi-detached houses are also more likely to be owner occupiers, and the DECC stated in their latest report that it is the disconnect between tenants and landlords that stands in the way of privately rented homes becoming more energy efficient, because it is unclear who should pay for and benefit from the efficiency measures. Private renters are the most likely to be in the deepest fuel poverty. 
 
 Accommodation type is also indicative 
 
@@ -143,9 +138,13 @@ The deprivation model ran here included the proportion of accomodation types in 
 
 A daily temporal profile was calculated showing total energy usage per day; these were combined with the PCS townsend scores and accomodation types and a linear regression model ran.The energy consumption model explained R^2^ = 15.54% (adjusted R2 = 15.49%) of the variability in domestic energy consumption, p < 2.2e-16, suggesting that these results have not occured randomly.
 
-A detached and typically larger house than the reference category (semi-detached) would use on average an extra 1953.2 kW per day in comparison, whereas a smaller terrace house would use less to the sum of 135.5 kW per day. Detached houses typically have a greater number of rooms and lower levels of overcrowding, therefor more rooms need heating and lighting (which account for 60% amount of average consumption). This model also suggests that as Townsend scores increase, energy usage decreases overall, which as a measure of deprivation is to be expected – the higher the level of deprivation the less likely people are to be able to afford to be wasteful and consume unnecessary energy. They are also likely to live in smaller houses with lower heating and lighting requirement, own and use fewer appliances and have smaller families.
+A detached and typically larger house than the reference category (semi-detached) would use on average an extra 1953.2 kW per day in comparison, whereas a smaller terrace house would use less to the sum of 135.5 kW per day. Detached houses typically have a greater number of rooms and lower levels of overcrowding, therefore more rooms need heating and lighting (which account for 60% of average consumption [@Strategy]). This model also suggests that as Townsend scores increase, energy usage decreases overall, which as a measure of deprivation is to be expected – the higher the level of deprivation the less likely people are to be able to afford to be wasteful and consume unnecessary energy. They are also likely to live in smaller houses with lower heating and lighting requirement, own and use fewer appliances and have smaller families.
 
 
 # Conclusions and future work. 
+
+To conclude, the research achieved both aims set out at the beginning of the project. From this research we now better understand the representativeness and spatio-temporal signatures of aggregate residential energy consumption. From using the dataset as a whole and a LISA analysis to show that the spatial variations in Smart Meter penertration have not occured randomly to breaking it down to an aggregate at Postcode Sector Level to better understand temporal consumption over various granularities. The second aim, to understand energy consumption and socio-demographic variants in relation to fuel poverty also yielded positive results. After descriptive analysis revelead an interesting pattern between OAC groups of more deprived status, this was investigated more thoroughly with a regression model combined a postcode sector townsend score and proportions of accommodation types. This returned a significant result, suggesting that socio-demographic determiners are indeed correlated with fuel poverty. 
+
+*****
 
 # Bibliography 
